MIDIData/MIDIData.h

/* MIDITrack構造体 */
/* 双方向リンクリスト構造 */
typedef struct tagMIDITrack {
	long m_lTempIndex;                  /* このトラックの一時的なインデックス(0から始まる) */
	long m_lNumEvent;                   /* トラック内のイベント数 */
	struct tagMIDIEvent* m_pFirstEvent; /* 最初のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pLastEvent;  /* 最後のイベントへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pPrevTrack;  /* 前のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pNextTrack;  /* 次のトラックへのポインタ(なければNULL) */
	void*  m_pParent;                   /* 親(MIDIDataオブジェクト)へのポインタ */
	long m_lInputOn;                    /* 入力(0=OFF, 1=On) */
	long m_lInputPort;                  /* 入力ポート(-1=n/a, 0～15=ポート番号) */
	long m_lInputChannel;               /* 入力チャンネル(-1=n/1, 0～15=チャンネル番号) */
	long m_lOutputOn;                   /* 出力(0=OFF, 1=On) */
	long m_lOutputPort;                 /* 出力ポート(-1=n/a, 0～15=ポート番号) */
	long m_lOutputChannel;              /* 出力チャンネル(-1=n/1, 0～15=チャンネル番号) */
	long m_lTimePlus;                   /* タイム+ */
	long m_lKeyPlus;                    /* キー+ */
	long m_lVelocityPlus;               /* ベロシティ+ */
	long m_lViewMode;                   /* 表示モード(0=通常、1=ドラム) */
	long m_lForeColor;                  /* 前景色 */
	long m_lBackColor;                  /* 背景色 */
	long m_lReserved1;                  /* 予約領域1(使用禁止) */
	long m_lReserved2;                  /* 予約領域2(使用禁止) */
	long m_lReserved3;                  /* 予約領域3(使用禁止) */
	long m_lReserved4;                  /* 予約領域4(使用禁止) */
	long m_lUser1;                      /* ユーザー用自由領域1(未使用) */
	long m_lUser2;                      /* ユーザー用自由領域2(未使用) */
	long m_lUser3;                      /* ユーザー用自由領域3(未使用) */
	long m_lUserFlag;                   /* ユーザー用自由領域4(未使用) */
} MIDITrack;
/* MIDIData構造体 */
/* 双方向リンクリスト構造 */
typedef struct tagMIDIData {
	unsigned long m_lFormat;            /* SMFフォーマット(0/1) */
	unsigned long m_lNumTrack;          /* トラック数(0～∞) */
	unsigned long m_lTimeBase;          /* タイムベース(例：120) */
	struct tagMIDITrack* m_pFirstTrack; /* 最初のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pLastTrack;  /* 最後のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pNextSeq;    /* 次のシーケンスへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pPrevSeq;    /* 前のシーケンスへのポインタ(なければNULL) */
	void*  m_pParent;                   /* 親(常にNULL。将来ソングリストをサポート) */
	long m_lReserved1;                  /* 予約領域1(使用禁止) */
	long m_lReserved2;                  /* 予約領域2(使用禁止) */
	long m_lReserved3;                  /* 予約領域3(使用禁止) */
	long m_lReserved4;                  /* 予約領域4(使用禁止) */
	long m_lUser1;                      /* ユーザー用自由領域1(未使用) */
	long m_lUser2;                      /* ユーザー用自由領域2(未使用) */
	long m_lUser3;                      /* ユーザー用自由領域3(未使用) */
	long m_lUserFlag;                   /* ユーザー用自由領域4(未使用) */
} MIDIData;
/* タイムコードを小節：拍：ティックに分解(最初のトラック内の拍子記号から計算) */
long __stdcall MIDIData_BreakTime 
	(MIDIData* pMIDIData, long lTime, long* pMeasure, long* pBeat, long* pTick);
/* タイムコードを小節：拍：ティックに分解(最初のトラック内の拍子記号を基に計算) */
long __stdcall MIDIData_BreakTimeEx
	(MIDIData* pMIDIData, long lTime, long* pMeasure, long* pBeat, long* pTick,
	long* pnn, long* pdd, long* pcc, long* pbb);
/* 小節：拍：ティックからタイムコードを生成(最初のトラック内の拍子記号から計算) */
long __stdcall MIDIData_MakeTime
	(MIDIData* pMIDIData, long lMeasure, long lBeat, long lTick, long* pTime);
/* 小節：拍：ティックからタイムコードを生成(最初のトラック内の拍子記号を基に計算) */
long __stdcall MIDIData_MakeTimeEx
	(MIDIData* pMIDIData, long lMeasure, long lBeat, long lTick, long* pTime,
	long* pnn, long* pdd, long* pcc, long* pbb);
/* 指定位置におけるテンポを取得 */
long __stdcall MIDIData_FindTempo
	(MIDIData* pMIDIData, long lTime, long* pTempo);
/* 指定位置における拍子記号を取得 */
long __stdcall MIDIData_FindTimeSignature 
	(MIDIData* pMIDIData, long lTime, long* pnn, long* pdd, long* pcc, long* pbb);
/* 指定位置における調性記号を取得 */
long __stdcall MIDIData_FindKeySignature 
	(MIDIData* pMIDIData, long lTime, long* psf, long* pmi);
/* このMIDIデータに別のMIDIデータをマージする(20080715廃止) */
/*long __stdcall MIDIData_Merge (MIDIData* pMIDIData, MIDIData* pMergeData, */
/*	long lTime, long lFlags, long* pInsertedEventCount, long* pDeletedEventCount);*/

/* 保存・読み込み用関数 */

/* MIDIDataをスタンダードMIDIファイル(SMF)から読み込み、*/
/* 新しいMIDIデータへのポインタを返す(失敗時NULL) */
MIDIData* __stdcall MIDIData_LoadFromSMFA (const char* pszFileName);
#define MIDIData_LoadFromSMF MIDIData_LoadFromSMFW
#define MIDIData_LoadFromSMF MIDIData_LoadFromSMFA
/* MIDIデータをスタンダードMIDIファイル(SMF)として保存 */
long __stdcall MIDIData_SaveAsSMFA (MIDIData* pMIDIData, const char* pszFileName);
#define MIDIData_SaveAsSMF MIDIData_SaveAsSMFW
#define MIDIData_SaveAsSMF MIDIData_SaveAsSMFA
/* MIDIDataをバイナリファイルから読み込み、*/
/* 新しいMIDIデータへのポインタを返す(失敗時NULL) */
MIDIData* __stdcall MIDIData_LoadFromBinaryA (const char* pszFileName);
#define MIDIData_LoadFromBinary MIDIData_LoadFromBinaryW
#define MIDIData_LoadFromBinary MIDIData_LoadFromBinaryA
/* MIDIDataをバイナリファイルに保存 */
long __stdcall MIDIData_SaveAsBinaryA (MIDIData* pMIDIData, const char* pszFileName);
#define MIDIData_SaveAsBinary MIDIData_SaveAsBinaryW
#define MIDIData_SaveAsBinary MIDIData_SaveAsBinaryA
/* MIDIDataをCherrryファイル(*.chy)から読み込み、 */
/* 新しいMIDIデータへのポインタを返す(失敗時NULL) */
MIDIData* __stdcall MIDIData_LoadFromCherryA (const char* pszFileName);
#define MIDIData_LoadFromCherry MIDIData_LoadFromCherryW
#define MIDIData_LoadFromCherry MIDIData_LoadFromCherryA
/* MIDIデータをCherryファイル(*.chy)に保存 */
long __stdcall MIDIData_SaveAsCherryA (MIDIData* pMIDIData, const char* pszFileName);
#define MIDIData_SaveAsCherry MIDIData_SaveAsCherryW
#define MIDIData_SaveAsCherry MIDIData_SaveAsCherryA
/* MIDIデータをMIDICSVファイル(*.csv)から読み込み */
/* 新しいMIDIデータへのポインタを返す(失敗時NULL) */
MIDIData* __stdcall MIDIData_LoadFromMIDICSVA (const char* pszFileName);
#define MIDIData_LoadFromMIDICSV MIDIData_LoadFromMIDICSVW
#define MIDIData_LoadFromMIDICSV MIDIData_LoadFromMIDICSVA
/* MIDIデータをMIDICSVファイル(*.csv)として保存 */
long __stdcall MIDIData_SaveAsMIDICSVA (MIDIData* pMIDIData, const char* pszFileName);
#define MIDIData_SaveAsMIDICSV MIDIData_SaveAsMIDICSVW
#define MIDIData_SaveAsMIDICSV MIDIData_SaveAsMIDICSVA