MIDIData/MIDIData.bas


' タイムコードを小節：拍：ティックに分解(最初のトラック内の拍子記号を基に計算)
Declare Function MIDIData_BreakTimeEx Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lTime As Long, _
    ByRef pMeasure As Long, ByRef pBeat As Long, ByRef pTick As Long, _
    ByRef pnn As Long, ByRef pdd As Long, ByRef pcc As Long, ByRef pbb As Long) As Long

' タイムコードを小節：拍：ティックに分解(最初のトラック内の拍子記号から計算)
Declare Function MIDIData_BreakTime Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lTime As Long, _
    ByRef pMeasure As Long, ByRef pBeat As Long, ByRef pTick As Long) As Long

' 小節：拍：ティックからタイムコードを生成(最初のトラック内の拍子記号から計算)
Declare Function MIDIData_MakeTimeEx Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lMeasure As Long, ByVal lBeat As Long, _
    ByVal lTick As Long, ByRef pTime As Long, _
    ByRef pnn As Long, ByRef pdd As Long, ByRef pcc As Long, ByRef pbb As Long) As Long

' 小節：拍：ティックからタイムコードを生成(最初のトラック内の拍子記号から計算)
Declare Function MIDIData_MakeTime Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal pMeasure As Long, ByVal pBeat As Long, _
    ByVal pTick As Long, ByRef pTime As Long) As Long

' 指定時刻におけるテンポを取得
Declare Function MIDIData_FindTempo Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lTime As Long, ByRef pTempo As Long) As Long

' 指定時刻における拍子記号を取得
Declare Function MIDIData_FindTimeSignature Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lTime As Long, _
     ByRef pnn As Long, ByRef pdd As Long, ByRef pcc As Long, ByRef pbb As Long) As Long

' 指定時刻における調性記号を取得
Declare Function MIDIData_FindKeySignature Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lTime As Long, _
    ByRef psf As Long, ByRef pmi As Long) As Long

' このMIDIデータに別のMIDIデータをマージする(20080715廃止)
'Declare Function MIDIData_Merge Lib "MIDIData.dll" _
'    (ByVal pMIDIData As Long, ByVal pMergeData As Long, _
'     ByVal lTime As Long, ByVal lFlags As Long, _
'     ByRef pInsertedEventCount As Long, ByRef pDeletedEventCount As Long) As Long

' 保存・読み込み用関数

' MIDIDataをスタンダードMIDIファイル(SMF)から読み込み、
' 新しいMIDIデータへのポインタを返す(失敗時NULL)
Declare Function MIDIData_LoadFromSMF Lib "MIDIData.dll" _
    Alias "MIDIData_LoadFromSMFA" _
    (ByVal strFileName As String) As Long

' MIDIデータをスタンダードMIDIファイル(SMF)として保存
Declare Function MIDIData_SaveAsSMF Lib "MIDIData.dll" _
    Alias "MIDIData_SaveAsSMFA" _
    (ByVal pMIDIData As Long, ByVal strFileName As String) As Long

' MIDIデータをバイナリファイルより読み込み、
' 新しいMIDIデータへのポインタを返す(失敗時NULL)
Declare Function MIDIData_LoadFromBinary Lib "MIDIData.dll" _
    Alias "MIDIData_LoadFromBinaryA" _
    (ByVal strFileName As String) As Long

' MIDIデータをバイナリファイルへ保存
Declare Function MIDIData_SaveAsBinary Lib "MIDIData.dll" _
    Alias "MIDIData_SaveAsBinaryA" _
    (ByVal pMIDIData As Long, ByVal strFileName As String) As Long

' MIDIデータをCherryファイル(*.chy)より読み込み、
' 新しいMIDIデータへのポインタを返す(失敗時NULL)
Declare Function MIDIData_LoadFromCherry Lib "MIDIData.dll" _
    Alias "MIDIData_LoadFromCherryA" _
    (ByVal strFileName As String) As Long

' MIDIデータをCherryファイル(*.chy)へ保存
Declare Function MIDIData_SaveAsCherry Lib "MIDIData.dll" _
    Alias "MIDIData_SaveAsCherryA" _
    (ByVal pMIDIData As Long, ByVal strFileName As String) As Long

' MIDIDataをMIDICSVファイル(*.csv)から読み込み、
' 新しいMIDIデータへのポインタを返す(失敗時NULL)
Declare Function MIDIData_LoadFromMIDICSV Lib "MIDIData.dll" _
    Alias "MIDIData_LoadFromMIDICSVA" _
    (ByVal strFileName As String) As Long

' MIDIデータをMIDICSVファイル(*.csv)として保存
Declare Function MIDIData_SaveAsMIDICSV Lib "MIDIData.dll" _
    Alias "MIDIData_SaveAsMIDICSVA" _
    (ByVal pMIDIData As Long, ByVal strFileName As String) As Long


